--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@chakra-ui/react": "^1.8.8",
 		"@emotion/react": "^11.9.0",
 		"@emotion/styled": "^11.8.1",
+		"date-fns": "^2.28.0",
 		"framer-motion": "^6.2.9",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
@@ -28,6 +29,7 @@
 		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-promise": "5.2.0",
 		"eslint-plugin-react": "7.29.4",
+		"eslint-plugin-react-hooks": "^4.4.0",
 		"prettier": "2.6.2",
 		"vite": "2.9.0"
 	}
